--- a/man/crypt.1.html
+++ b/man/crypt.1.html
@@ -89,6 +89,7 @@
 <dt><code>-I</code>, <code>--no-id</code></dt><dd><p>Don't use a salt id.</p></dd>
 <dt><code>-n</code>, <code>--no-newline</code></dt><dd><p>Don't print a newline after the output.</p></dd>
 <dt><code>-s</code>, <code>--salt</code>=<var>salt</var></dt><dd><p>Specify the salt to use.</p></dd>
+<dt><code>-v</code>, <code>--version</code></dt><dd><p>Print program version.</p></dd>
 <dt><code>-h</code>, <code>-?</code>, <code>--help</code></dt><dd><p>Print usage information.</p></dd>
 </dl>
 
